# ORGFXSoC

./: README.md
orpsocv2/bench/sysc/include/: DebugUnitSC.h  GdbServerSC.h  JtagDriverSC.h  JtagSC.h  JtagSC_includes.h  MemCache.h  MpHash.h  Or1200MonitorSC.h  OrpsocAccess.h  OrpsocMain.h  ResetSC.h  RspConnection.h  RspPacket.h  SprCache.h  TapAction.h  TapActionDRScan.h  TapActionIRScan.h  TapActionReset.h  TapStateMachine.h  TraceSC.h  Utils.h
orpsocv2/bench/verilog/: or1200_monitor.v  orpsoc_testbench.v
orpsocv2/boards/: README
orpsocv2/doc/: Makefile  Makefile.am  Makefile.in  config.status  config.texi  configure  configure.in  orpsoc.aux  orpsoc.cp  orpsoc.cps  orpsoc.info  orpsoc.texi  orpsoc.toc
orpsocv2/doc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
orpsocv2/scripts/make/: Makefile-board-benchsrc.inc  Makefile-board-definesparse.inc  Makefile-board-icarus.inc  Makefile-board-modelsim.inc  Makefile-board-paths.inc  Makefile-board-rtlmodules.inc  Makefile-board-simclean.inc  Makefile-board-sw.inc  Makefile-board-tops.inc  Makefile-misc.inc  Makefile-rtltestrules.inc  Makefile-sim-definesgen.inc  Makefile-simulators.inc  Makefile-swrules.inc
orpsocv2/sw/: Makefile.inc  README
orpsocv2/sw/apps/dhry/: Makefile  (+2 more)
orpsocv2/sw/bootrom/: Makefile  bootrom.S  bootrom.S~
orpsocv2/sw/lib/: Makefile  lib-utils.c  printf.c
orpsocv2/sw/utils/: Makefile  bin2binsizeword  bin2binsizeword.c  bin2c  bin2flimg  bin2hex  bin2hex.c  bin2srec  bin2vlogarray  bin2vlogarray.c  bin2vmem  bin2vmem.c  binlog2readable  binlog2readable.cpp
(+451 files in other folders)
