dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([orpsoc_doc], [0.1], [openrisc@opencores.org])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_CONFIG_FILES([Makefile])

# Generate the output
AC_COPYRIGHT([Copyright (C) 2010 OpenCores

Contributor Julius Baxter <julius@opencores.org>

This file is part of OpenRISC Reference Platform SoC.

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 3 of the License, or (at your option)
any later version.

This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
more details.

You should have received a copy of the GNU General Public License along
with this program.  If not, see <http://www.gnu.org/licenses/>.])


AC_OUTPUT